--- a/VasilevaDO/Part 1. Feature Engineering.ipynb
+++ b/VasilevaDO/Part 1. Feature Engineering.ipynb
@@ -927,7 +927,9 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "bitcoin_headlines = pd.DataFrame({'Title': [i for sub in headlines_list for i in sub], 'Date': [i for sub in dates_list for i in sub[:10]]})"
+   ]
   }
  ],
  "metadata": {
