--- a/VasilevaDO/Part 1. Feature Engineering.ipynb
+++ b/VasilevaDO/Part 1. Feature Engineering.ipynb
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -36,7 +36,7 @@
     "import warnings\n",
     "from importlib import reload\n",
     "import datetime\n",
-    "from features_engineering import ma7, ma21, bollinger_bands, momentum\n",
+    "from features_engineering import ma7, ma21, bollinger_bands\n",
     "\n",
     "warnings.filterwarnings('ignore')"
    ]
@@ -50,7 +50,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 158,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -60,7 +60,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 159,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -182,7 +182,7 @@
        "4  106.250000   97.750000     0.0  1.085995e+09  "
       ]
      },
-     "execution_count": 159,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -193,7 +193,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 160,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -324,7 +324,7 @@
        "max    1.072263e+12  "
       ]
      },
-     "execution_count": 160,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -335,7 +335,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 161,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -368,7 +368,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 162,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -377,7 +377,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 163,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -500,7 +500,7 @@
        "2013-05-03 23:59:59   97.750000     0.0  1.085995e+09  "
       ]
      },
-     "execution_count": 163,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -518,7 +518,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 164,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -542,7 +542,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 165,
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def momentum(data, n_days):\n",
+    "    m = [None for i in range(n_days)]    \n",
+    "    for i in range(len(data) - n_days):\n",
+    "        end = i + n_days\n",
+    "        m.append(data[i] - n_days)\n",
+    "    return m"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -582,7 +596,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 166,
+   "execution_count": 16,
    "metadata": {
     "scrolled": false
    },
@@ -793,7 +807,7 @@
        "2013-05-23 23:59:59 -3.619472  129.524510  103.815585  "
       ]
      },
-     "execution_count": 166,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
