--- a/Final_Notebook.ipynb
+++ b/Final_Notebook.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Altcoin Price Prediction Project Notebook"
+    "# Altcoin Price Prediction Project - Notebook"
    ]
   }
  ],
