--- a/Final_Report.ipynb
+++ b/Final_Report.ipynb
@@ -1,12 +1,77 @@
 {
  "cells": [
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "9da4899c",
+   "cell_type": "markdown",
+   "id": "8b472923",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "# Altcoin Price Prediction Project - Report\n",
+    "Can we predict the price of altcoin cryptocurrencies, and profit by trading them based on the forecast?"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "eec7f398",
+   "metadata": {},
+   "source": [
+    "## Abstract"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "90ece70d",
+   "metadata": {},
+   "source": [
+    "## Introduction"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "f6c934d5",
+   "metadata": {},
+   "source": [
+    "## Background"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "38227bf2",
+   "metadata": {},
+   "source": [
+    "## Data"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "4bfd3634",
+   "metadata": {},
+   "source": [
+    "## Methods"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "be371e6d",
+   "metadata": {},
+   "source": [
+    "## Evaluation"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "89dbce86",
+   "metadata": {},
+   "source": [
+    "## Conclusion"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "f415de26",
+   "metadata": {},
+   "source": [
+    "## Attribution"
+   ]
   }
  ],
  "metadata": {
