--- a/Final_Report.ipynb
+++ b/Final_Report.ipynb
@@ -19,6 +19,22 @@
   },
   {
    "cell_type": "markdown",
+   "id": "cad345d4",
+   "metadata": {},
+   "source": [
+    "A cryptocurrency is a digital or virtual currency that is secured by cryptography, which makes it nearly impossible to counterfeit or double-spend. Many cryptocurrencies are decentralized networks based on blockchain technology—a distributed ledger enforced by a disparate network of computers. A defining feature of cryptocurrencies is that they are generally not issued by any central authority, rendering them theoretically immune to government interference or manipulation. The first blockchain-based cryptocurrency was Bitcoin, which still remains the most popular and most valuable. Today, there are thousands of alternate cryptocurrencies with various functions and specifications. Some of the competing cryptocurrencies spawned by Bitcoin’s success, known as \"altcoins,\" include Litecoin, Peercoin, and Namecoin, as well as Ethereum, Cardano, and EOS. Today, the aggregate value of all the cryptocurrencies in existence is around $1.5 trillion—Bitcoin currently represents more than 60% of the total value. "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "e9ce1016",
+   "metadata": {},
+   "source": [
+    "Either high-cap or low-cap cryptocurrencies are investment opportunities. This project's main objective is to develop models that are capable of predicting altcoin cryptocurrency close prices, as well as forecast prices. Altcoins generally have high volatility and large price swings, which are conducive to short-term trading. We look at short / long term trading and low-cap coins. \n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "90ece70d",
    "metadata": {},
    "source": [
@@ -90,7 +106,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.8"
+   "version": "3.8.5"
   }
  },
  "nbformat": 4,
