--- a/Final_Notebook.ipynb
+++ b/Final_Notebook.ipynb
@@ -4,8 +4,39 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Altcoin Price Prediction Project - Notebook"
+    "# Altcoin Price Prediction Project - Final Notebook"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Autoregression - Simple Model"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import numpy as np\n",
+    "import pandas as pd\n",
+    "import matplotlib.pyplot as plt\n",
+    "from sklearn.model_selection import train_test_split\n",
+    "from sklearn.metrics import mean_squared_error\n",
+    "import seaborn as sns\n",
+    "from statsmodels.tsa.ar_model import AutoReg\n",
+    "import matplotlib.dates as mdates\n",
+    "import datetime"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
