--- a/Final_Report.ipynb
+++ b/Final_Report.ipynb
@@ -2,6 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
+   "id": "8b472923",
    "metadata": {},
    "source": [
     "# Altcoin Price Prediction Project - Report\n",
@@ -10,6 +11,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "eec7f398",
    "metadata": {},
    "source": [
     "## Abstract"
@@ -17,28 +19,15 @@
   },
   {
    "cell_type": "markdown",
-<<<<<<< HEAD
-   "id": "ca6c02ca",
-=======
->>>>>>> e40c50bfb7f8e67aac859056f4dd3915c9c5d186
+   "id": "65e6f7eb",
    "metadata": {},
    "source": [
-    "A cryptocurrency is a digital or virtual currency that is secured by cryptography, which makes it nearly impossible to counterfeit or double-spend. Many cryptocurrencies are decentralized networks based on blockchain technology—a distributed ledger enforced by a disparate network of computers. A defining feature of cryptocurrencies is that they are generally not issued by any central authority, rendering them theoretically immune to government interference or manipulation. The first blockchain-based cryptocurrency was Bitcoin, which still remains the most popular and most valuable. Today, there are thousands of alternate cryptocurrencies with various functions and specifications. Some of the competing cryptocurrencies spawned by Bitcoin’s success, known as \"altcoins,\" include Litecoin, Peercoin, and Namecoin, as well as Ethereum, Cardano, and EOS. Today, the aggregate value of all the cryptocurrencies in existence is around $1.5 trillion—Bitcoin currently represents more than 60% of the total value. "
+    "With cryptocurrency interest on the rise, there are many investment (short-term or long-term) opportunities to be had, especially due to the volatility of certain digital assets. The cryptocurrency market is tough to predict, just as the stock market, so we aim to create simple and complex models which are capable of forecasting low-cap coins and altcoins, which are generally subject to larger price swings. Using these models, the ultimate goal is to profit through trading these assets. We do this using autoregression, MACD and Bollinger Bands, and LSTM models. We test on historical price data of many different cryptocurrencies, and forecast using more recent data gathered from CoinAPI."
    ]
   },
   {
    "cell_type": "markdown",
-<<<<<<< HEAD
-   "id": "91b4d980",
-=======
->>>>>>> e40c50bfb7f8e67aac859056f4dd3915c9c5d186
-   "metadata": {},
-   "source": [
-    "Either high-cap or low-cap cryptocurrencies are investment opportunities. This project's main objective is to develop models that are capable of predicting altcoin cryptocurrency close prices, as well as forecast prices. Altcoins generally have high volatility and large price swings, which are conducive to short-term trading. We look at short / long term trading and low-cap coins. Additionally, there a function will be utilize that measures the profit considering that there is a transaction fee to pay for each transaction. \n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
+   "id": "90ece70d",
    "metadata": {},
    "source": [
     "## Introduction"
@@ -46,8 +35,7 @@
   },
   {
    "cell_type": "markdown",
-<<<<<<< HEAD
-   "id": "da23a7b9",
+   "id": "61223b95",
    "metadata": {},
    "source": [
     "The objective is to build a model that informs an investor's decision making with regards to buying or selling cryptocurrency to make a profit. "
@@ -56,8 +44,6 @@
   {
    "cell_type": "markdown",
    "id": "f6c934d5",
-=======
->>>>>>> e40c50bfb7f8e67aac859056f4dd3915c9c5d186
    "metadata": {},
    "source": [
     "## Background"
@@ -65,30 +51,15 @@
   },
   {
    "cell_type": "markdown",
+   "id": "38227bf2",
    "metadata": {},
    "source": [
-    "## Data\n"
+    "## Data"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "\n",
-    "The dataset has one csv file for each currency. Price history is available on a daily basis starting from April 28, 2013. This dataset has the historical price information of some of the top crypto currencies by market capitalization. Sourced from CoinMarketCap.com"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "https://www.kaggle.com/sudalairajkumar/cryptocurrencypricehistory"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-<<<<<<< HEAD
-   "id": "ed5c8da9",
+   "id": "0104ad02",
    "metadata": {},
    "source": [
     "The analysis will only focus on the pricing information, leaving aside any factor which may impact the price of Bitcoin, like for example, news, which can play a very important rule. Price history is available on a daily basis from 2013. The datasets that are used for this project has the historical price information of some of the top crypto currencies by market capitalization.\n",
@@ -103,7 +74,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d881822f",
+   "id": "680e5121",
    "metadata": {},
    "source": [
     "The data was derived from [Blockchain's website](http://www.blockchain.com/explorer), which includes the variables mentioned above. "
@@ -112,8 +83,6 @@
   {
    "cell_type": "markdown",
    "id": "4bfd3634",
-=======
->>>>>>> e40c50bfb7f8e67aac859056f4dd3915c9c5d186
    "metadata": {},
    "source": [
     "## Methods"
@@ -121,6 +90,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "be371e6d",
    "metadata": {},
    "source": [
     "## Evaluation"
@@ -128,6 +98,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "89dbce86",
    "metadata": {},
    "source": [
     "## Conclusion"
@@ -135,6 +106,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "f415de26",
    "metadata": {},
    "source": [
     "## Attribution"
@@ -157,7 +129,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.3"
+   "version": "3.8.8"
   }
  },
  "nbformat": 4,
