added methods (LSTM)

--- a/Final_Report.ipynb
+++ b/Final_Report.ipynb
@@ -2,6 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
+   "id": "8b472923",
    "metadata": {},
    "source": [
     "# Altcoin Price Prediction Project - Report\n",
@@ -10,6 +11,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "eec7f398",
    "metadata": {},
    "source": [
     "## Abstract"
@@ -17,10 +19,7 @@
   },
   {
    "cell_type": "markdown",
-<<<<<<< HEAD
-   "id": "ca6c02ca",
-=======
->>>>>>> e40c50bfb7f8e67aac859056f4dd3915c9c5d186
+   "id": "65e6f7eb",
    "metadata": {},
    "source": [
     "A cryptocurrency is a digital or virtual currency that is secured by cryptography, which makes it nearly impossible to counterfeit or double-spend. Many cryptocurrencies are decentralized networks based on blockchain technology—a distributed ledger enforced by a disparate network of computers. A defining feature of cryptocurrencies is that they are generally not issued by any central authority, rendering them theoretically immune to government interference or manipulation. The first blockchain-based cryptocurrency was Bitcoin, which still remains the most popular and most valuable. Today, there are thousands of alternate cryptocurrencies with various functions and specifications. Some of the competing cryptocurrencies spawned by Bitcoin’s success, known as \"altcoins,\" include Litecoin, Peercoin, and Namecoin, as well as Ethereum, Cardano, and EOS. Today, the aggregate value of all the cryptocurrencies in existence is around $1.5 trillion—Bitcoin currently represents more than 60% of the total value. "
@@ -28,10 +27,7 @@
   },
   {
    "cell_type": "markdown",
-<<<<<<< HEAD
-   "id": "91b4d980",
-=======
->>>>>>> e40c50bfb7f8e67aac859056f4dd3915c9c5d186
+   "id": "098b9f30",
    "metadata": {},
    "source": [
     "Either high-cap or low-cap cryptocurrencies are investment opportunities. This project's main objective is to develop models that are capable of predicting altcoin cryptocurrency close prices, as well as forecast prices. Altcoins generally have high volatility and large price swings, which are conducive to short-term trading. We look at short / long term trading and low-cap coins. Additionally, there a function will be utilize that measures the profit considering that there is a transaction fee to pay for each transaction. \n"
@@ -39,6 +35,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "90ece70d",
    "metadata": {},
    "source": [
     "## Introduction"
@@ -46,8 +43,7 @@
   },
   {
    "cell_type": "markdown",
-<<<<<<< HEAD
-   "id": "da23a7b9",
+   "id": "61223b95",
    "metadata": {},
    "source": [
     "The objective is to build a model that informs an investor's decision making with regards to buying or selling cryptocurrency to make a profit. "
@@ -56,8 +52,6 @@
   {
    "cell_type": "markdown",
    "id": "f6c934d5",
-=======
->>>>>>> e40c50bfb7f8e67aac859056f4dd3915c9c5d186
    "metadata": {},
    "source": [
     "## Background"
@@ -65,30 +59,15 @@
   },
   {
    "cell_type": "markdown",
+   "id": "38227bf2",
    "metadata": {},
    "source": [
-    "## Data\n"
+    "## Data"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "\n",
-    "The dataset has one csv file for each currency. Price history is available on a daily basis starting from April 28, 2013. This dataset has the historical price information of some of the top crypto currencies by market capitalization. Sourced from CoinMarketCap.com"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "https://www.kaggle.com/sudalairajkumar/cryptocurrencypricehistory"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-<<<<<<< HEAD
-   "id": "ed5c8da9",
+   "id": "0104ad02",
    "metadata": {},
    "source": [
     "The analysis will only focus on the pricing information, leaving aside any factor which may impact the price of Bitcoin, like for example, news, which can play a very important rule. Price history is available on a daily basis from 2013. The datasets that are used for this project has the historical price information of some of the top crypto currencies by market capitalization.\n",
@@ -103,7 +82,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d881822f",
+   "id": "680e5121",
    "metadata": {},
    "source": [
     "The data was derived from [Blockchain's website](http://www.blockchain.com/explorer), which includes the variables mentioned above. "
@@ -112,8 +91,6 @@
   {
    "cell_type": "markdown",
    "id": "4bfd3634",
-=======
->>>>>>> e40c50bfb7f8e67aac859056f4dd3915c9c5d186
    "metadata": {},
    "source": [
     "## Methods"
@@ -121,6 +98,157 @@
   },
   {
    "cell_type": "markdown",
+   "id": "f4a7a696",
+   "metadata": {},
+   "source": [
+    "### Autoregression model"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "26805952",
+   "metadata": {},
+   "source": [
+    "### LSTM Model \n",
+    "Long-Short Term Memory (LSTM) is a type of RNN that allows us to process not only single data points (such as images) but also entire sequences of data (such as speech or video). They are a great choice for time series forecasting, and they are the type of architecture we will be using today. For this particular model, Dogecoin will be used as an experiment to test the model's performance. Let's begin by how the dataset looks like."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "04bf2887",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pandas as pd\n",
+    "from IPython.display import Markdown as md"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "db9a8066",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df = pd.read_csv('coin_Dogecoin.csv')\n",
+    "df = df.set_index(pd.DatetimeIndex(df['Date']))\n",
+    "df = df[['Close']]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "cc58cf8a",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Close</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Date</th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>2013-12-16 23:59:59</th>\n",
+       "      <td>0.000205</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2013-12-17 23:59:59</th>\n",
+       "      <td>0.000269</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2013-12-18 23:59:59</th>\n",
+       "      <td>0.000362</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2013-12-19 23:59:59</th>\n",
+       "      <td>0.001162</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2013-12-20 23:59:59</th>\n",
+       "      <td>0.000704</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                        Close\n",
+       "Date                         \n",
+       "2013-12-16 23:59:59  0.000205\n",
+       "2013-12-17 23:59:59  0.000269\n",
+       "2013-12-18 23:59:59  0.000362\n",
+       "2013-12-19 23:59:59  0.001162\n",
+       "2013-12-20 23:59:59  0.000704"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "id": "d6dbf49c",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/markdown": [
+       "The data consists of 2631 observations, which means roughly 7 years."
+      ],
+      "text/plain": [
+       "<IPython.core.display.Markdown object>"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "md(\"The data consists of {} observations, which means roughly {} years.\".format(len(df),round(len(df)/365)))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "27d5fe7d",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "be371e6d",
    "metadata": {},
    "source": [
     "## Evaluation"
@@ -128,6 +256,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "89dbce86",
    "metadata": {},
    "source": [
     "## Conclusion"
@@ -135,6 +264,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "f415de26",
    "metadata": {},
    "source": [
     "## Attribution"
@@ -157,7 +287,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.3"
+   "version": "3.8.5"
   }
  },
  "nbformat": 4,
