rewrote abstract par 1

--- a/Final_Report.ipynb
+++ b/Final_Report.ipynb
@@ -19,22 +19,11 @@
   },
   {
    "cell_type": "markdown",
-   "id": "65e6f7eb",
-   "metadata": {},
-   "source": [
-<<<<<<< HEAD
-    "A cryptocurrency is a digital or virtual currency that is secured by cryptography, which makes it nearly impossible to counterfeit or double-spend. Many cryptocurrencies are decentralized networks based on blockchain technology—a distributed ledger enforced by a disparate network of computers. A defining feature of cryptocurrencies is that they are generally not issued by any central authority, rendering them theoretically immune to government interference or manipulation. The first blockchain-based cryptocurrency was Bitcoin, which still remains the most popular and most valuable. Today, there are thousands of alternate cryptocurrencies with various functions and specifications. Some of the competing cryptocurrencies spawned by Bitcoin’s success, known as \"altcoins,\" include Litecoin, Peercoin, and Namecoin, as well as Ethereum, Cardano, and EOS. Today, the aggregate value of all the cryptocurrencies in existence is around $1.5 trillion—Bitcoin currently represents more than 60% of the total value. "
-   ]
-  },
-  {
-   "cell_type": "markdown",
    "id": "098b9f30",
    "metadata": {},
    "source": [
-    "Either high-cap or low-cap cryptocurrencies are investment opportunities. This project's main objective is to develop models that are capable of predicting altcoin cryptocurrency close prices, as well as forecast prices. Altcoins generally have high volatility and large price swings, which are conducive to short-term trading. We look at short / long term trading and low-cap coins. Additionally, there a function will be utilize that measures the profit considering that there is a transaction fee to pay for each transaction. \n"
-=======
+    "Either high-cap or low-cap cryptocurrencies are investment opportunities. This project's main objective is to develop models that are capable of predicting altcoin cryptocurrency close prices, as well as forecast prices. Altcoins generally have high volatility and large price swings, which are conducive to short-term trading. We look at short / long term trading and low-cap coins. Additionally, there a function will be utilize that measures the profit considering that there is a transaction fee to pay for each transaction. \n",
     "With cryptocurrency interest on the rise, there are many investment (short-term or long-term) opportunities to be had, especially due to the volatility of certain digital assets. The cryptocurrency market is tough to predict, just as the stock market, so we aim to create simple and complex models which are capable of forecasting low-cap coins and altcoins, which are generally subject to larger price swings. Using these models, the ultimate goal is to profit through trading these assets. We do this using autoregression, MACD and Bollinger Bands, and LSTM models. We test on historical price data of many different cryptocurrencies, and forecast using more recent data gathered from CoinAPI."
->>>>>>> 16bb9a8c4e2ed13431f117eb5b4564a580a054a6
    ]
   },
   {
@@ -67,7 +56,6 @@
    "metadata": {},
    "source": [
     "## Data"
-<<<<<<< HEAD
    ]
   },
   {
@@ -91,17 +79,11 @@
    "metadata": {},
    "source": [
     "The data was derived from [Blockchain's website](http://www.blockchain.com/explorer), which includes the variables mentioned above. "
-=======
->>>>>>> 16bb9a8c4e2ed13431f117eb5b4564a580a054a6
    ]
   },
   {
    "cell_type": "markdown",
-<<<<<<< HEAD
-   "id": "4bfd3634",
-=======
-   "id": "0104ad02",
->>>>>>> 16bb9a8c4e2ed13431f117eb5b4564a580a054a6
+   "id": "7c52e6f6",
    "metadata": {},
    "source": [
     "## Methods"
@@ -109,11 +91,7 @@
   },
   {
    "cell_type": "markdown",
-<<<<<<< HEAD
-   "id": "f4a7a696",
-=======
-   "id": "680e5121",
->>>>>>> 16bb9a8c4e2ed13431f117eb5b4564a580a054a6
+   "id": "5b48cf5",
    "metadata": {},
    "source": [
     "### Autoregression model"
@@ -121,11 +99,7 @@
   },
   {
    "cell_type": "markdown",
-<<<<<<< HEAD
-   "id": "26805952",
-=======
    "id": "4bfd3634",
->>>>>>> 16bb9a8c4e2ed13431f117eb5b4564a580a054a6
    "metadata": {},
    "source": [
     "### LSTM Model \n",
@@ -258,14 +232,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "27d5fe7d",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
    "cell_type": "markdown",
    "id": "be371e6d",
    "metadata": {},
@@ -306,11 +272,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-<<<<<<< HEAD
-   "version": "3.8.5"
-=======
    "version": "3.8.8"
->>>>>>> 16bb9a8c4e2ed13431f117eb5b4564a580a054a6
   }
  },
  "nbformat": 4,
