--- a/experiments/mwander/Simple_Model_Trade.ipynb
+++ b/experiments/mwander/Simple_Model_Trade.ipynb
@@ -514,6 +514,8 @@
     "    return holdings, money - capital - (cost-capital), cost\n",
     "            \n",
     "def short_term_trade_ar(data, forecast, capital, dates, optimization='RET'):\n",
+    "    data_unmod = data\n",
+    "    data = data.\n",
     "    \n",
     "    action_colors = {\n",
     "        'buy': 'b',\n",
@@ -525,7 +527,7 @@
     "    # model selection (lag order based on minimization)\n",
     "    lag_order = model_selection(data, forecast, dates, optimization)\n",
     "    \n",
-    "    autoreg = AutoReg(X, lags=lag_order, old_names=True).fit()\n",
+    "    autoreg = AutoReg(data, lags=lag_order, old_names=True).fit()\n",
     "    X_hat = np.exp(autoreg.forecast(forecast))\n",
     "    \n",
     "    # plotting new out-of-set prediction\n",
@@ -585,7 +587,9 @@
    "cell_type": "code",
    "execution_count": 10,
    "id": "650faf15",
-   "metadata": {},
+   "metadata": {
+    "scrolled": false
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -1109,7 +1113,7 @@
     }
    ],
    "source": [
-    "X = df['price_close'].apply(np.log).diff().dropna().values\n",
+    "X = df['price_close'].values\n",
     "hilo_info, df_actions, profit, cost = short_term_trade_ar(X, 7, 100, df.index, 'RET')\n",
     "print(f\"Profit (USD): {profit}\")\n",
     "print(f\"Initial Cost (USD): {cost}\")\n",
@@ -1135,6 +1139,29 @@
    "source": [
     "df = df.set_index(pd.DatetimeIndex(df['Date'])).drop(['Name','Symbol', 'Date', 'SNo'], axis=1)\n",
     "df.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "id": "bf3af089",
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "AttributeError",
+     "evalue": "'list' object has no attribute 'array'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-14-27cf9dac944f>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[1;32m----> 1\u001b[1;33m \u001b[0mpd\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mSeries\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mdiff\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;36m1\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;36m2\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;36m3\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[1;32m~\\anaconda3\\lib\\site-packages\\pandas\\core\\series.py\u001b[0m in \u001b[0;36mdiff\u001b[1;34m(self, periods)\u001b[0m\n\u001b[0;32m   2465\u001b[0m         \u001b[1;33m{\u001b[0m\u001b[0mexamples\u001b[0m\u001b[1;33m}\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m   2466\u001b[0m         \"\"\"\n\u001b[1;32m-> 2467\u001b[1;33m         \u001b[0mresult\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0malgorithms\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mdiff\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0marray\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mperiods\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m   2468\u001b[0m         return self._constructor(result, index=self.index).__finalize__(\n\u001b[0;32m   2469\u001b[0m             \u001b[0mself\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mmethod\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;34m\"diff\"\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;31mAttributeError\u001b[0m: 'list' object has no attribute 'array'"
+     ]
+    }
+   ],
+   "source": [
+    "pd.Series.diff([1,2,3])"
    ]
   }
  ],
