--- a/Final_Report.ipynb
+++ b/Final_Report.ipynb
@@ -112,7 +112,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 1. Features Engineering"
+    "##  Features Engineering"
    ]
   },
   {
@@ -146,7 +146,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 2. Exploratory Analysis"
+    "##  Exploratory Analysis"
    ]
   },
   {
