--- a/Final_Report.ipynb
+++ b/Final_Report.ipynb
@@ -2,7 +2,6 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "8b472923",
    "metadata": {
     "id": "8b472923"
    },
@@ -13,7 +12,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "eec7f398",
    "metadata": {
     "id": "eec7f398"
    },
@@ -23,7 +21,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "098b9f30",
    "metadata": {
     "id": "098b9f30"
    },
@@ -34,7 +31,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "90ece70d",
    "metadata": {
     "id": "90ece70d"
    },
@@ -44,7 +40,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "61223b95",
    "metadata": {
     "id": "61223b95"
    },
@@ -54,7 +49,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f6c934d5",
    "metadata": {
     "id": "f6c934d5"
    },
@@ -64,7 +58,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "38227bf2",
    "metadata": {
     "id": "38227bf2"
    },
@@ -74,12 +67,11 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0104ad02",
    "metadata": {
     "id": "0104ad02"
    },
    "source": [
-    "The analysis will only focus on the pricing information, leaving aside any factor which may impact the price of Bitcoin, like for example, news, which can play a very important rule. Price history is available on a daily basis from 2013. The datasets that are used for this project has the historical price information of some of the top crypto currencies by market capitalization.\n",
+    "The analysis will only focus on the pricing information, leaving aside any factor which may impact the price of Bitcoin, like for example, news, which can play a very important rule. Price history is available on a daily basis from 2013. The datasets that are used for this project has the historical price information of some of the top crypto currencies by market capitalization. The dataset is from Kaggle - https://www.kaggle.com/sudalairajkumar/cryptocurrencypricehistory \n",
     "- Date : date of observation\n",
     "- Open : Opening price on the given day\n",
     "- High : Highest price on the given day\n",
@@ -91,7 +83,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "680e5121",
    "metadata": {
     "id": "680e5121"
    },
@@ -101,7 +92,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5f388bfa",
    "metadata": {
     "id": "5f388bfa"
    },
@@ -111,7 +101,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7c52e6f6",
    "metadata": {
     "id": "7c52e6f6"
    },
@@ -121,7 +110,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "113b3d65",
    "metadata": {
     "id": "113b3d65"
    },
@@ -132,7 +120,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5e74cc35",
    "metadata": {
     "id": "5e74cc35"
    },
@@ -148,7 +135,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "fb9ad8ac",
    "metadata": {
     "id": "fb9ad8ac",
     "outputId": "d4136271-b183-4553-8a17-57610be40779"
@@ -191,7 +177,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f7d03d6c",
    "metadata": {
     "id": "f7d03d6c"
    },
@@ -201,7 +186,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9107582c",
    "metadata": {
     "id": "9107582c"
    },
@@ -211,7 +195,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "iJw1FU27bAM5",
    "metadata": {
     "id": "iJw1FU27bAM5"
    },
@@ -221,7 +204,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "Y3rxK8K2bJW5",
    "metadata": {
     "id": "Y3rxK8K2bJW5"
    },
@@ -231,7 +213,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5b48cf5",
    "metadata": {
     "id": "5b48cf5"
    },
@@ -241,7 +222,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2849dca2",
    "metadata": {
     "id": "2849dca2"
    },
@@ -252,7 +232,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2d1321c6",
    "metadata": {
     "id": "2d1321c6",
     "outputId": "e7698f5a-0f96-457e-b320-8000a56c49bb"
@@ -405,7 +384,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9437b1d9",
    "metadata": {
     "id": "9437b1d9"
    },
@@ -417,7 +395,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "39ecadd8",
    "metadata": {
     "id": "39ecadd8"
    },
@@ -428,7 +405,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0ce40427",
    "metadata": {
     "id": "0ce40427"
    },
@@ -440,7 +416,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "bbc3d844",
    "metadata": {
     "id": "bbc3d844"
    },
@@ -451,7 +426,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "358ed956",
    "metadata": {
     "id": "358ed956"
    },
@@ -466,7 +440,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d810fe2b",
    "metadata": {
     "id": "d810fe2b"
    },
@@ -477,7 +450,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8f1ffb23",
    "metadata": {
     "id": "8f1ffb23"
    },
@@ -491,7 +463,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f2833c5a",
    "metadata": {
     "id": "f2833c5a"
    },
@@ -501,7 +472,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5587e829",
    "metadata": {
     "id": "5587e829"
    },
@@ -511,7 +481,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5c972be5",
    "metadata": {
     "id": "5c972be5"
    },
@@ -521,7 +490,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "99a7d86b",
    "metadata": {
     "id": "99a7d86b"
    },
@@ -531,7 +499,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e53bc93a",
    "metadata": {
     "id": "e53bc93a"
    },
@@ -541,7 +508,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3cde2c57",
    "metadata": {
     "id": "3cde2c57"
    },
@@ -551,7 +517,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0b0b724c",
    "metadata": {
     "id": "0b0b724c"
    },
@@ -561,7 +526,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4bfd3634",
    "metadata": {
     "id": "4bfd3634"
    },
@@ -572,7 +536,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e0c6f855",
    "metadata": {
     "id": "e0c6f855"
    },
@@ -583,7 +546,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "97fd8f57",
    "metadata": {
     "id": "97fd8f57",
     "outputId": "13ff73a4-5878-4259-f0d7-a921c8d45e62"
@@ -614,7 +576,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "-QPV-WjC5vUX",
    "metadata": {
     "id": "-QPV-WjC5vUX"
    },
@@ -624,7 +585,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "RZIL0fMiDc3w",
    "metadata": {
     "id": "RZIL0fMiDc3w"
    },
@@ -635,7 +595,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1wBnGA8vDOLN",
    "metadata": {
     "id": "1wBnGA8vDOLN"
    },
@@ -645,7 +604,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "GFwwdyUcFOKm",
    "metadata": {
     "id": "GFwwdyUcFOKm"
    },
@@ -655,7 +613,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "g0HVqxdHqETA",
    "metadata": {
     "id": "g0HVqxdHqETA"
    },
@@ -665,7 +622,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5c0102f7",
    "metadata": {
     "id": "5c0102f7"
    },
@@ -676,7 +632,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b4206eaf",
    "metadata": {
     "id": "b4206eaf"
    },
@@ -693,7 +648,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3c295321",
    "metadata": {
     "id": "3c295321"
    },
@@ -705,7 +659,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "be371e6d",
    "metadata": {
     "id": "be371e6d"
    },
@@ -715,7 +668,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "IVDwDGCHpJaL",
    "metadata": {
     "id": "IVDwDGCHpJaL"
    },
@@ -725,7 +677,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "eiQW9KIvpgvY",
    "metadata": {
     "id": "eiQW9KIvpgvY"
    },
@@ -735,7 +686,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "yb56Ehp-p72r",
    "metadata": {
     "id": "yb56Ehp-p72r"
    },
@@ -746,7 +696,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "lZlU8cw2syZa",
    "metadata": {
     "id": "lZlU8cw2syZa"
    },
@@ -756,7 +705,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7-c7qw7cs1SI",
    "metadata": {
     "id": "7-c7qw7cs1SI"
    },
@@ -766,7 +714,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "M6T87knwxKEy",
    "metadata": {
     "id": "M6T87knwxKEy"
    },
@@ -776,7 +723,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5LVE22EsESe7",
    "metadata": {
     "id": "5LVE22EsESe7"
    },
@@ -786,7 +732,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "KoqI241mEXUG",
    "metadata": {
     "id": "KoqI241mEXUG"
    },
@@ -796,7 +741,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "w-P7Gro4EinI",
    "metadata": {
     "id": "w-P7Gro4EinI"
    },
@@ -806,7 +750,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "89dbce86",
    "metadata": {
     "id": "89dbce86"
    },
@@ -816,7 +759,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7efc97a4",
    "metadata": {},
    "source": [
     "In the grand scheme of things what we have accomplished is create models that have different tradeoffs, that are able to predict low-cap cryptocurrencies' values to a certain extend. That, combined with the function that is able to take the transaction cost of each sell/buy into account - can inform one's decision on when to buy and sell a crypto."
@@ -824,7 +766,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f415de26",
    "metadata": {
     "id": "f415de26"
    },
@@ -853,7 +794,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.5"
+   "version": "3.7.6"
   }
  },
  "nbformat": 4,
