enumerating figures, add to conclusion

--- a/Final_Report.ipynb
+++ b/Final_Report.ipynb
@@ -68,11 +68,20 @@
   },
   {
    "cell_type": "markdown",
+   "id": "561464f2",
+   "metadata": {},
+   "source": [
+    "Autoregression models, such as ARIMA, VAR, VARMA, as well as LSTM models have been used to model and forecast cryptocurrency prices."
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "53d5f5eb",
    "metadata": {},
    "source": [
-    "1. Short-term bitcoin market prediction via machine learning (Patrick Jaquart, David Dann, Christof Weinhardt\n",
-    "2. As a guide for terminology https://www.investopedia.com\n"
+    "1. Short-term bitcoin market prediction via machine learning (Patrick Jaquart, David Dann, Christof Weinhardt)\n",
+    "2. As a guide for terminology https://www.investopedia.com\n",
+    "3. Autoregressive Integrated Moving Average (ARIMA) Model for Forecasting Cryptocurrency Exchange Rate in High Volatility Environment: A New Insight of Bitcoin Transaction https://www.researchgate.net/publication/321375630_Autoregressive_Integrated_Moving_Average_ARIMA_Model_for_Forecasting_Cryptocurrency_Exchange_Rate_in_High_Volatility_Environment_A_New_Insight_of_Bitcoin_Transaction"
    ]
   },
   {
@@ -271,7 +280,7 @@
     }
    },
    "cell_type": "markdown",
-   "id": "0ff4a733",
+   "id": "f06beb54",
    "metadata": {
     "id": "fb9ad8ac",
     "outputId": "d4136271-b183-4553-8a17-57610be40779"
@@ -440,7 +449,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "96e2d528",
+   "id": "fe5861ba",
    "metadata": {},
    "source": [
     "#### Figure 9: Lag Plot of the natural logarithm of the close price of Cardano"
@@ -473,7 +482,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "825438d8",
+   "id": "61d684c3",
    "metadata": {},
    "source": [
     "#### Figure 10: Autocorrelation Plot of the natural logarithm of the close price of Cardano"
@@ -528,7 +537,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "70c43329",
+   "id": "cbc1b6e1",
    "metadata": {},
    "source": [
     "#### Figure 11: Output of the autoregression model"
@@ -549,7 +558,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "88a735fe",
+   "id": "f6c6863c",
    "metadata": {},
    "source": [
     "#### Figure 12: Prediction of Cardano price on the hold-out set"
@@ -572,7 +581,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d351cff6",
+   "id": "7fb686f2",
    "metadata": {},
    "source": [
     "#### Figure 13: Future prediction of 7 days past the end of the hold-out set"
@@ -595,7 +604,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "875bbbcc",
+   "id": "20499012",
    "metadata": {},
    "source": [
     "#### Figure 14: Trading scheme for the 7-day forecast"
@@ -821,7 +830,7 @@
    "id": "b454d5e1",
    "metadata": {},
    "source": [
-    "In the grand scheme of things, we have created models that have different tradeoffs, that are able to predict low-cap cryptocurrencies' values to a certain extent. We examined the simple autoregression model, the Bollinger Bands and MACD methods, and the LSTM model. We have more than enough data, which allows us to use larger lag values if the forecast is longer-term. The LSTM model is promising, as well as the autoregression model. These, combined with the function that is able to take the transaction cost of each sell/buy into account - can inform one's decision on when to buy and sell a cryptocurrency. For future research, a model with more endogenous variables, such as a vector autoregression model taking into account open, low, and high prices, as well as volume and marketcap"
+    "In the grand scheme of things, we have created models that have different tradeoffs, that are able to predict low-cap cryptocurrencies' values to a certain extent. We examined the simple autoregression model, the Bollinger Bands and MACD methods, and the LSTM model. We have more than enough data, which allows us to use larger lag values if the forecast is longer-term. The LSTM model is promising, as well as the autoregression model. These, combined with the function that is able to take the transaction cost of each sell/buy into account - can inform one's decision on when to buy and sell a cryptocurrency. For future research, a model with more endogenous variables, such as a vector autoregression model taking into account open, low, and high prices, as well as volume and marketcap, should be examined."
    ]
   },
   {
